--- a/webApp/src/styles/jobStyle.css
+++ b/webApp/src/styles/jobStyle.css
@@ -8,9 +8,38 @@
 }
 
 .custom-shadow {
-    box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.3); /* Applies shadow in all directions */
-  }
+  box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.3); /* Applies shadow in all directions */
+}
 
 .job-card {
-    box-shadow: 0px 0px 18px 4px rgba(0, 0, 0, 0.1); /* Applies shadow in all directions */
-  }
+  box-shadow: 0px 0px 18px 4px rgba(0, 0, 0, 0.1); /* Applies shadow in all directions */
+}
+
+.custom-lines::after {
+  content: "";
+  position: absolute;
+  background-color: #f3f4f6;
+}
+
+/* Bottom line */
+.custom-lines::after {
+  width: 100%;
+  height: 10px;
+  left: 0;
+  bottom: -10px;
+}
+
+/* Right line */
+.custom-lines::before {
+  content: "";
+  position: absolute;
+  background-color: #f3f4f6;
+  width: 10px;
+  height: 100%;
+  right: -10px;
+  bottom: 0;
+}
+
+.jobPostsShadow {
+  box-shadow: 0px 0px 15px 8px rgba(0, 0, 0, 0.1); /* Applies shadow in all directions */
+}
